kaifa/kaifa-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kaifa-ingress
spec:
  rules:
    - host: kaifa.meter.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kaifa-service
                port:
                  number: 80
